# ARCS

./: .gitignore  .plan.md  ARCHITECTURE.md  DECISIONS.md  NEXT_STEPS.md  README.md  pyproject.toml  visualize_analoggenie.py
.claude/: settings.local.json
.githooks/: pre-push
circuitgenie/: __init__.py
docs/: ARCS_Algorithm_Explained.md
paper/: arcs_paper.tex
results/: ablations.json  ablations_log.txt  arch_comparison.json  arch_comparison_v2.json  arch_multiseed.json  arch_seed43.json  arch_seed44.json  arch_seed45.json  arch_seed46.json  baseline_ga.json  baseline_ga_log.txt  baseline_random_search.json  baseline_rs_log.txt  baselines_34_topologies.json  bestofn_gt_v2.json  bestofn_scaling.json  bestofn_trained.json  ccfm_evaluation.json  eval_combined_cond.json  eval_combined_uncond.json  eval_rl_best_cond.json  eval_rl_best_uncond.json  eval_rl_final_cond.json  eval_rl_final_uncond.json  hybrid_phase14.json  hybrid_phase15.json  hybrid_v2.json  hybrid_v2b.json  hybrid_v3.json  hybrid_v5.json  phase13_comparison.json  phase14_comparison.json  publication_eval.json  publication_eval_v2.json  publication_eval_v3.json  ranking_comparison.json  refinement_benchmark.json  refinement_bestofn.json  retrain_v3_comparison.json  sim_combined_cond.json  (+48 more)
scripts/: analyze_warm_start.py  check_phase16_consistency.py  compare_architectures.py  compare_baselines.py  compare_constrained.py  evaluate_all.py  evaluate_architectures.py  evaluate_ccfm.py  evaluate_hybrid.py  evaluate_publication.py  evaluate_topology_ablation.py  evaluate_vcg.py  gen_data.sh  gen_tier2_data.sh  generate_circuit.py  generate_data.py  install_git_hooks.sh  plot_architecture.py  plot_phase14_figures.py  plot_training.py  (+36 more)
(+68 files in other folders)
