[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcs"
version = "0.1.0"
description = "Autoregressive Representation for Circuit Synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tushar Pathak"},
]

dependencies = [
    "numpy>=1.24,<3",
    "torch>=2.0,<3",
    "networkx>=3.0,<4",
    "pandas>=2.0,<3",
    "tqdm>=4.60",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "pyspice>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "ipython>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
